<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingBottom="7dp"
        android:paddingEnd="7dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:src="@drawable/ic_left_arrow" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:theme="@style/AppTheme"
        android:indeterminate="true"
        android:visibility="invisible"
        android:scaleY="2"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:scrollbarStyle="outsideOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical"
            android:paddingStart="15dp"
            android:paddingTop="5dp"
            android:paddingEnd="15dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="25dp"
                android:fontFamily="@font/bold"
                android:includeFontPadding="false"
                android:text="@string/log_in_to_your_account"
                android:textColor="@color/colorAccent"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/shape_corner_unfill"
                android:paddingStart="15dp"
                android:paddingEnd="15dp">

                <EditText
                    android:id="@+id/et_Email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@color/colorTransparent"
                    android:fontFamily="@font/normal"
                    android:gravity="center_vertical"
                    android:hint="@string/email"
                    android:includeFontPadding="false"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape_corner_unfill"
                android:paddingStart="15dp"
                android:paddingEnd="5dp">

                <EditText
                    android:id="@+id/et_Password"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:background="@color/colorTransparent"
                    android:fontFamily="@font/normal"
                    android:gravity="center_vertical"
                    android:hint="@string/password"
                    android:includeFontPadding="false"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/btn_forgot_password"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@color/colorTransparent"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/normal"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_button_fill"
                android:paddingStart="15dp"
                android:paddingEnd="15dp">

                <TextView
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@color/colorTransparent"
                    android:fontFamily="@font/normal"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:text="@string/log_in"
                    android:textColor="@android:color/white"
                    android:textSize="19sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>