<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="12dp"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingTop="10dp"
    android:paddingEnd="10dp"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:clickable="true"
        android:focusable="true"
        android:padding="5dp"
        android:src="@drawable/ic_cross" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="outsideOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingEnd="15dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/bold"
                android:includeFontPadding="false"
                android:text="@string/forgot_password_title"
                android:textColor="@color/colorAccent"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:fontFamily="@font/normal"
                android:includeFontPadding="false"
                android:text="@string/forgot_password_subtitle"
                android:textColor="@color/colorLightGrey"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/shape_corner_unfill"
                android:paddingStart="15dp"
                android:paddingEnd="15dp">

                <EditText
                    android:id="@+id/et_Email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@color/colorTransparent"
                    android:fontFamily="@font/normal"
                    android:gravity="center_vertical"
                    android:hint="@string/email"
                    android:includeFontPadding="false"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_button_fill"
                android:paddingStart="15dp"
                android:paddingEnd="15dp">

                <TextView
                    android:id="@+id/btn_submit"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@color/colorTransparent"
                    android:fontFamily="@font/normal"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:text="@string/submit"
                    android:textColor="@android:color/white"
                    android:textSize="19sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/terms_and_condition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/normal"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="By resetting password, you agree with our terms and conditions."
                android:textColor="@color/colorDarkGrey"
                android:textSize="11sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>